name:                rpm-pkg
version:             0.1.0
synopsis:            RPM package name-version-release library
description:
            An RPM package version-release (NVR) type.
license:             GPL-2
license-file:        LICENSE
author:              Jens Petersen <petersen@redhat.com>
maintainer:          Jens Petersen <petersen@redhat.com>
copyright:           2016-2018  Red Hat
                     2017,2021  Jens Petersen <petersen@redhat.com>
category:            Distribution
homepage:            https://github.com/juhp/rpm-pkg
bug-reports:         https://github.com/juhp/rpm-pkg/issues
build-type:          Simple
extra-doc-files:     README.md
--                       ChangeLog.md
cabal-version:       1.18
tested-with:         GHC == 8.4.4, GHC == 8.6.5, GHC == 8.8.4, GHC == 8.10.4

source-repository head
  type:                git
  location:            https://github.com/juhp/rpm-pkg.git

library
  build-depends:       base < 5,
                       extra >= 1.5.1
  default-language:    Haskell2010
  exposed-modules:     Data.RPM
                       Data.RPM.NV
                       Data.RPM.NVR
                       Data.RPM.NVRA
                       Data.RPM.VerCmp
                       Data.RPM.VerRel
  hs-source-dirs:      src

  ghc-options:         -Wall
  if impl(ghc >= 8.0)
    ghc-options:       -Wcompat
                       -Widentities
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wredundant-constraints
  if impl(ghc >= 8.2)
    ghc-options:       -fhide-source-paths
  if impl(ghc >= 8.4)
    ghc-options:       -Wmissing-export-lists
                       -Wpartial-fields
  if impl(ghc >= 8.10)
    ghc-options:       -Wunused-packages

test-suite tests
    type:               exitcode-stdio-1.0
    hs-source-dirs:     test
    main-is:            Spec.hs
    other-modules:      RPM.PackageSpec
                        RPM.VersionSpec
    build-depends:      hspec,
                        base < 5.0,
                        rpm-pkg

    default-language:   Haskell2010

    ghc-options:        -Wall
  if impl(ghc >= 8.0)
    ghc-options:       -Wcompat
                       -Widentities
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wredundant-constraints
  if impl(ghc >= 8.2)
    ghc-options:       -fhide-source-paths
  if impl(ghc >= 8.4)
    ghc-options:       -Wpartial-fields
  if impl(ghc >= 8.10)
    ghc-options:       -Wunused-packages
