name:                rpm
version:             0.1.0.0
synopsis:            Simple RPM library
description:         RPM package version library
license:             GPL-2
license-file:        LICENSE
author:              Jens Petersen
maintainer:          petersen@redhat.com
copyright:           Jens Petersen
category:            Distribution
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     RPM.NV,
                       RPM.NVR
  build-depends:       base >=4.7 && <4.8
  hs-source-dirs:      src
  default-language:    Haskell2010
